--- a/client/.github/workflows/ci.yml
+++ b/client/.github/workflows/ci.yml
@@ -29,13 +29,13 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Setup Node.js 18.17.0
+      - name: Setup Node.js 20.9.0
         uses: actions/setup-node@v3
         with:
-          node-version: 18.17.0
+          node-version: 20.9.0
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Run build
-        run: npm run build
+        run: yarn build
