--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+server.port=${SERVER_PORT}
 #spring.datasource.url=${DB}
 #spring.datasource.username=${USER_NAME}
 #spring.datasource.password=${USER_PASSWORD}
