--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,23 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "formik": "^2.4.6",
+    "prop-types": "^15.8.1",
+    "react-number-format": "^5.4.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux-logger": "^3.0.6",
+    "sass": "^1.77.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -25,7 +39,12 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-config-react-app": "^7.0.1",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "vite": "^5.4.1"
   }
 }
