--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.12.0",
