added liquibase, users table

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=${SERVER_PORT}
-#spring.datasource.url=${DB}
-#spring.datasource.username=${USER_NAME}
-#spring.datasource.password=${USER_PASSWORD}
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.datasource.url=${DB}
+spring.datasource.username=${USER_NAME}
+spring.datasource.password=${USER_PASSWORD}
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
