--- a/src/main/resources/db/changelog/changeset/create-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-user-table.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: BIGINT
+                  type: SERIAL
                   autoIncrement: true
                   constraints:
                     primaryKey: true
