--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,9 +1,10 @@
 server.port=9000
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.url=${DB_LOCAL}
-#spring.datasource.username=${USER_NAME_LOCAL}
-#spring.datasource.password=${USER_PASSWORD_LOCAL}
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.datasource.url=${DB_LOCAL}
+spring.datasource.username=${USER_NAME_LOCAL}
+spring.datasource.password=${USER_PASSWORD_LOCAL}
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 #jwt.secret.access=${JWT_SECRET_ACCESS}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.sql.init.mode=always
