--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=project
-spring.profiles.active=prod
+spring.profiles.active=local
 
 spring.sql.init.mode=never
 spring.liquibase.enabled=true
