--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,4 +2,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-user-table.yaml
   - include:
+      file: db/changelog/changeset/create-message-table.yaml
+  - include:
       file: db/changelog/changeset/insert-data.sql
