--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,4 +4,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-message-table.yaml
   - include:
+      file: db/changelog/changeset/create-workplace-table.yaml
+  - include:
       file: db/changelog/changeset/insert-data.sql
