--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux-logger": "^3.0.6",
+    "rss-parser": "^3.13.0",
     "sass": "^1.79.4",
     "yup": "^1.4.0"
   },
