--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
