--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -10,6 +10,10 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-post-table.yaml
   - include:
+      file: db/changelog/changeset/create-like-table.yaml
+  - include:
+      file: db/changelog/changeset/create-comment-table.yaml
+  - include:
       file: db/changelog/changeset/insert-data-users.sql
   - include:
       file: db/changelog/changeset/insert-data-posts.sql
