--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -14,6 +14,8 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-comment-table.yaml
   - include:
+      file: db/changelog/changeset/create-comment-like-table.yaml
+  - include:
       file: db/changelog/changeset/insert-data-users.sql
   - include:
       file: db/changelog/changeset/insert-data-posts.sql
