--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -10,11 +10,15 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-post-table.yaml
   - include:
+      file: db/changelog/changeset/create-group-table.yaml
+  - include:
       file: db/changelog/changeset/create-like-table.yaml
   - include:
       file: db/changelog/changeset/create-comment-table.yaml
   - include:
       file: db/changelog/changeset/create-comment-like-table.yaml
+  - include:
+      file: db/changelog/changeset/create-group-user-table.yaml
   - include:
       file: db/changelog/changeset/insert-data-users.sql
   - include:
