--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "particles.js": "^2.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
