--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -20,6 +20,8 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-group-user-table.yaml
   - include:
+      file: db/changelog/changeset/create-news-table.yaml
+  - include:
       file: db/changelog/changeset/insert-data-users.sql
   - include:
       file: db/changelog/changeset/insert-data-posts.sql
@@ -29,3 +31,5 @@ databaseChangeLog:
       file: db/changelog/changeset/insert-data-friends.sql
   - include:
       file: db/changelog/changeset/insert-data-messages.sql
+  - include:
+      file: db/changelog/changeset/insert-data-news.sql
