--- a/src/main/resources/db/changelog/changeset/create-comment-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-comment-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
-      id: create-comment
-      author: Viktor Lytvynenko
+      id: 1
+      author: yourname
       changes:
         - createTable:
             tableName: comments
@@ -9,7 +9,6 @@ databaseChangeLog:
               - column:
                   name: id
                   type: SERIAL
-                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
@@ -31,26 +30,16 @@ databaseChangeLog:
               - column:
                   name: created_date
                   type: TIMESTAMP
-                  defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
               - column:
                   name: last_modified_date
                   type: TIMESTAMP
-                  defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            constraintName: fk_comment_post
             baseTableName: comments
             baseColumnNames: post_id
             referencedTableName: posts
             referencedColumnNames: id
-            onDelete: CASCADE
-        - addForeignKeyConstraint:
-            constraintName: fk_comment_user
-            baseTableName: comments
-            baseColumnNames: user_id
-            referencedTableName: users
-            referencedColumnNames: id
-            onDelete: CASCADE
+            constraintName: fk_comments_post_id
