--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -8,21 +8,25 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-friend-table.yaml
   - include:
-      file: db/changelog/changeset/create-post-table.yaml
-  - include:
       file: db/changelog/changeset/create-group-table.yaml
   - include:
-      file: db/changelog/changeset/create-like-table.yaml
+      file: db/changelog/changeset/create-post-table.yaml
   - include:
       file: db/changelog/changeset/create-comment-table.yaml
   - include:
-      file: db/changelog/changeset/create-comment-like-table.yaml
+      file: db/changelog/changeset/create-like-table.yaml
+#  - include:
+#      file: db/changelog/changeset/create-comment-like-table.yaml
   - include:
-      file: db/changelog/changeset/create-group-user-table.yaml
+      file: db/changelog/changeset/create-user-group-table.yaml
+  - include:
+      file: db/changelog/changeset/create-group-post-table.yaml
   - include:
       file: db/changelog/changeset/create-news-table.yaml
   - include:
       file: db/changelog/changeset/insert-data-users.sql
+  - include:
+      file: db/changelog/changeset/insert-data-groups.sql
   - include:
       file: db/changelog/changeset/insert-data-posts.sql
   - include:
