--- a/src/main/resources/db/changelog/changeset/create-like-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-like-table.yaml
@@ -1,7 +1,7 @@
 databaseChangeLog:
   - changeSet:
       id: 1
-      author: yourname
+      author: Viktor Lytvynenko
       changes:
         - createTable:
             tableName: likes
