--- a/src/main/resources/db/changelog/changeset/create-residence-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-residence-table.yaml
@@ -1,45 +1,42 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: create-residences
       author: Viktor Lytvynenko
       changes:
         - createTable:
-            tableName: posts
+            tableName: residences
             columns:
               - column:
                   name: id
                   type: SERIAL
+                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: user_id
-                  type: BIGINT
+                  name: planet
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: content
-                  type: TEXT
+                  name: country
+                  type: VARCHAR(255)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: city
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
                   name: created_date
                   type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
               - column:
                   name: last_modified_date
                   type: TIMESTAMP
+                  defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
-              - column:
-                  name: group_id
-                  type: BIGINT
-                  constraints:
-                    nullable: false
-        - addForeignKeyConstraint:
-            baseTableName: posts
-            baseColumnNames: group_id
-            referencedTableName: groups
-            referencedColumnNames: id
-            constraintName: fk_posts_group_id
