--- a/src/main/resources/db/changelog/changeset/create-user-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-user-table.yaml
@@ -56,6 +56,9 @@ databaseChangeLog:
                   name: residence_id
                   type: BIGINT
               - column:
+                  name: hobby_id
+                  type: BIGINT
+              - column:
                   name: created_date
                   type: TIMESTAMP
                   defaultValueComputed: CURRENT_TIMESTAMP
