--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,6 +4,8 @@ databaseChangeLog:
   - include:
       file: db/changelog/changeset/create-residence-table.yaml
   - include:
+      file: db/changelog/changeset/create-hobby-table.yaml
+  - include:
       file: db/changelog/changeset/create-user-table.yaml
   - include:
       file: db/changelog/changeset/create-message-table.yaml
@@ -27,6 +29,8 @@ databaseChangeLog:
       file: db/changelog/changeset/insert-data-workplaces.sql
   - include:
       file: db/changelog/changeset/insert-data-residences.sql
+  - include:
+      file: db/changelog/changeset/insert-data-hobbies.sql
   - include:
       file: db/changelog/changeset/insert-data-users.sql
   - include:
