--- a/src/main/resources/db/changelog/changeset/create-group-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-group-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-group
+      id: create-groups
       author: Viktor Lytvynenko
       changes:
         - createTable:
