--- a/src/main/resources/db/changelog/changeset/create-message-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-message-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-message
+      id: create-messages
       author: Viktor Lytvynenko
       changes:
         - createTable:
