--- a/src/main/resources/db/changelog/changeset/create-post-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-post-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: create-posts
       author: Viktor Lytvynenko
       changes:
         - createTable:
