--- a/src/main/resources/db/changelog/changeset/create-workplace-table.yaml
+++ b/src/main/resources/db/changelog/changeset/create-workplace-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-workplace
+      id: create-workplaces
       author: Viktor Lytvynenko
       changes:
         - createTable:
