--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
