--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^9.13.1",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
