--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.sql.init.mode=never
 spring.liquibase.enabled=true
 spring.jpa.show-sql=true
 
-#jwt.secret.access = ${JWT_SECRET_ACCESS}
-#jwt.secret.refresh = ${JWT_SECRET_REFRESH}
+jwt.secret.access = ${JWT_SECRET_ACCESS}
+jwt.secret.refresh = ${JWT_SECRET_REFRESH}
