--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,11 @@
 databaseChangeLog:
   - include:
+      file: db/changelog/changeset/security/create-member-table.yaml
+  - include:
+      file: db/changelog/changeset/security/create-role-table.yaml
+  - include:
+      file: db/changelog/changeset/security/create-refreshtoken-table.yaml
+  - include:
       file: db/changelog/changeset/create-workplace-table.yaml
   - include:
       file: db/changelog/changeset/create-residence-table.yaml
