--- a/src/main/resources/db/changelog/changeset/security/create-role-table.yaml
+++ b/src/main/resources/db/changelog/changeset/security/create-role-table.yaml
@@ -18,14 +18,14 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: member_id
+                  name: user_id
                   type: INT
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
             baseTableName: roles
-            baseColumnNames: member_id
-            constraintName: fk_roles_member
-            referencedTableName: members
+            baseColumnNames: user_id
+            constraintName: fk_roles_user
+            referencedTableName: users
             referencedColumnNames: id
             onDelete: CASCADE
