--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -34,6 +35,7 @@
     "redux-logger": "^3.0.6",
     "rss-parser": "^3.13.0",
     "sass": "^1.79.4",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
