--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,10 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "i18n-js": "^4.5.0",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "matrix-rotate": "^0.0.2",
     "particles.js": "^2.0.0",
     "prop-types": "^15.8.1",
@@ -26,6 +30,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.1.1",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.13.1",
     "react-number-format": "^5.4.2",
