--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "i18n-js": "^4.5.0",
