--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "rss-parser": "^3.13.0",
     "sass": "^1.81.0",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.13",
     "yup": "^1.4.0"
   },
